[package]
name = "noise-gen-rs"
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance"]
description = "Noise generation library: Perlin, Simplex (2D/3D), Worley/Voronoi noise, and fractal Brownian motion in pure Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/noise-gen-rs"
keywords = ["noise", "perlin", "simplex", "voronoi", "procedural"]
categories = ["algorithms", "mathematics", "game-development"]
readme = "README.md"

[dependencies]
